--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script>
-      const socket = io("http://localhost:8080/");
+      const socket = io("https://react-socket-server.herokuapp.com/");
 
       const formulario = document.querySelector("#miformulario");
       const mensajes = document.querySelector("#misMensajes");
